Remove default gorm.Model row, write submission spec
