# docs/swagger.yaml
@@ -49,6 +49,26 @@ definitions:
     - tags
     - title
     type: object
+  request.SubmissionRequest:
+    description: Necessary submission information when request
+    properties:
+      code:
+        type: string
+      language:
+        type: string
+      problem_id:
+        type: integer
+      result:
+        type: integer
+      user_id:
+        type: integer
+    required:
+    - code
+    - language
+    - problem_id
+    - result
+    - user_id
+    type: object
   response.ContestResponse:
     description: Contest information server responses
     properties:
@@ -94,6 +114,26 @@ definitions:
         type: string
       updatedAt:
         type: string
+    type: object
+  response.SubmissionResponse:
+    description: Necessary submission information when request
+    properties:
+      code:
+        type: string
+      language:
+        type: string
+      problem_id:
+        type: integer
+      result:
+        type: integer
+      user_id:
+        type: integer
+    required:
+    - code
+    - language
+    - problem_id
+    - result
+    - user_id
     type: object
 info:
   contact:
@@ -391,4 +431,100 @@ paths:
       summary: Put problem detail
       tags:
       - Problem Endpoints
+  /submission:
+    get:
+      consumes:
+      - application/json
+      description: Get submissions
+      parameters:
+      - description: Page of submissions
+        in: query
+        minimum: 1
+        name: page
+        required: true
+        type: integer
+      - description: User ID
+        in: query
+        name: user_id
+        type: string
+      - description: Type of language
+        in: query
+        name: language
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/response.SubmissionResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Get submissions
+      tags:
+      - Submission Endpoints
+    post:
+      consumes:
+      - application/json
+      description: Register submission
+      parameters:
+      - description: Necessary submission information
+        in: body
+        name: contest
+        required: true
+        schema:
+          $ref: '#/definitions/request.SubmissionRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Post submission
+      tags:
+      - Submission Endpoints
+  /submission/{submission_id}:
+    get:
+      consumes:
+      - application/json
+      description: Get submission detail
+      parameters:
+      - description: Submission ID
+        in: path
+        name: submission_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.SubmissionResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Get submission detail
+      tags:
+      - Submission Endpoints
 swagger: "2.0"
